--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,6 +23,9 @@ repositories {
     maven {
        url "http://bright.github.io/maven-repo/"
     }
+    maven {
+        url 'https://oss.sonatype.org/content/repositories/snapshots'
+    }
 }
 
 
@@ -34,6 +37,14 @@ dependencies {
     compile 'com.jjoe64:graphview:4.0.1'
     //Logging Framework
     compile 'org.slf4j:slf4j-api:1.7.21'
-    compile 'org.slf4j:slf4j-simple:1.7.21'
+    //compile 'org.slf4j:slf4j-simple:1.7.21'
+
+    compile 'com.github.tony19:logback-android-core:1.1.1-5'
+    compile('com.github.tony19:logback-android-classic:1.1.1-5') {
+        // workaround issue #73
+        exclude group: 'com.google.android', module: 'android'
+    }
+
+    //OpneCV
     compile project(':openCVLibrary310')
 }
