--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,7 +6,11 @@
     <uses-permission android:name="android.permission.CAMERA"/>
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_PHONE_STATE"/>
-    
+
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
+    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE"/>
 
     <uses-feature android:name="com.android.hardware.camera2.full"/>
     <uses-feature android:name="android.hardware.camera" android:required="false"/>
@@ -39,6 +43,12 @@
             android:name=".core.MeasurementActivity">
         </activity>
 
+
+        <service android:name=".core.SensorMaster">
+            <intent-filter>
+                <action android:name="masterthesis.cc.distributedsensorframework.core.SensorMaster"></action>
+            </intent-filter>
+        </service>
         <!--service
             android:name=".core.SensorMaster"
             android:icon="@mipmap/ic_launcher"
