--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,24 +3,27 @@
     package="masterthesis.cc.distributedsensorframework">
 
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
-    <uses-permission android:name="android.permission.CAMERA"/>
+    <uses-permission android:name="android.permission.CAMERA" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-    <uses-permission android:name="android.permission.READ_PHONE_STATE"/>
+    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
 
-    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
-    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
-    <uses-permission android:name="android.permission.INTERNET"/>
-    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE"/>
-
-    <uses-feature android:name="com.android.hardware.camera2.full"/>
-    <uses-feature android:name="android.hardware.camera" android:required="false"/>
-    <uses-feature android:name="android.hardware.camera.autofocus" android:required="false"/>
-    <uses-feature android:name="android.hardware.camera.front" android:required="false"/>
-    <uses-feature android:name="android.hardware.camera.front.autofocus" android:required="false"/>
-
-
-
-
+    <uses-feature android:name="com.android.hardware.camera2.full" />
+    <uses-feature
+        android:name="android.hardware.camera"
+        android:required="false" />
+    <uses-feature
+        android:name="android.hardware.camera.autofocus"
+        android:required="false" />
+    <uses-feature
+        android:name="android.hardware.camera.front"
+        android:required="false" />
+    <uses-feature
+        android:name="android.hardware.camera.front.autofocus"
+        android:required="false" />
 
     <application
         android:allowBackup="true"
@@ -37,19 +40,16 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
-
-        <activity
-            android:name=".core.MeasurementActivity">
-        </activity>
-
+        <activity android:name=".core.MeasurementActivity"></activity>
+        <activity android:name=".core.PhotoPostProd"></activity>
 
         <service android:name=".core.SensorMaster">
             <intent-filter>
-                <action android:name="masterthesis.cc.distributedsensorframework.core.SensorMaster"></action>
+                <action android:name="masterthesis.cc.distributedsensorframework.core.SensorMaster" />
             </intent-filter>
         </service>
-        <!--service
+        <!--
+        service
             android:name=".core.SensorMaster"
             android:icon="@mipmap/ic_launcher"
             android:label="@string/sensormaster_service_name"
@@ -61,9 +61,10 @@
                 <action android:name="android.intent.action.BOOT_COMPLETED" />
                 <action android:name="android.intent.action.QUIRCBOOT_POWERON" />
             </intent-filter>
-        </receiver-->
+        </receiver
+        -->
 
-
+        <activity android:name=".core.PhotoPostProd"></activity>
     </application>
 
 </manifest>
